{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "fbc0d9fd-5e72-4371-ab16-1b467cc547c7",
            "actions": [
                {
                    "name": "Pan",
                    "type": "PassThrough",
                    "id": "82ef2ab9-da9d-4db2-b20c-2d978890a7f8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "25cb7563-eec1-48ff-8c79-5648f8514ed7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Scan",
                    "type": "Button",
                    "id": "5d41ce8b-9e9d-48f9-a43c-935fa1876ad8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Enhance",
                    "type": "Button",
                    "id": "1e94b656-7407-4613-9765-193ed93d71ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchLeft",
                    "type": "Button",
                    "id": "d3a388a9-9d23-42b1-88af-3fe4b9c231cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchRight",
                    "type": "Button",
                    "id": "88854acd-e5fa-4e13-9944-75a1f5b30b69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuitGame",
                    "type": "Button",
                    "id": "05a7d13c-5a27-4d75-bd1c-f537a32a4d85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "659c3691-e8d4-4dd4-b00e-02dcf158429b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "c0b3612a-8211-4e70-a192-ebfcb93de3a0",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "46167445-5b07-43b0-86cc-8085a543a5f1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5838114a-0b4c-450e-be68-06e76978d2f6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "cdaf08e9-9220-41c5-bb87-b56a9bc456aa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "709860fe-dab1-4c25-8f48-4d3b066121d5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ead7af2e-e257-47e6-bc82-78045b7247eb",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Scan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cb4580f-441f-487c-aca3-e91497cbfae6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Scan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68dfafa8-9771-4a39-ba6f-495837d5edeb",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Enhance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4238aa4d-a241-4470-8a0b-0495d1c7d6ea",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Enhance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b65c7c4c-eff7-44ea-b7b6-d82def53fa4a",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SwitchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74634abe-0e84-4365-830b-954260639e56",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SwitchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efcb0c0e-58eb-41ec-ac6d-1f18c8508b5d",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SwitchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70e9c31e-54f8-4183-9d4b-ce78e40748e5",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SwitchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3b5b40e4-987f-4472-9e70-8e44ba545c4d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard;Gamepad",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70f2072d-c0e0-43fa-b616-4da0e4ea4894",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Clamp(min=-1,max=1)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Triggers",
                    "id": "0ee95670-f451-4639-b94c-1eea77ea956a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrow Keys",
                    "id": "3debeae8-8500-4291-82d8-1b7fca9a70f8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "dc54d525-c9a0-420c-bea2-d16c4895f207",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "948ad2c1-7271-4ccf-bf44-647580be0031",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "13540e38-5911-4d9f-acd6-ba6e11b821d2",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "083d8c11-5339-4fd4-ae78-42621ff0e9f9",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Dialogue",
            "id": "aae03ef2-2086-48aa-8a86-98f6c8a48dab",
            "actions": [
                {
                    "name": "Advance",
                    "type": "Button",
                    "id": "0d04bbf2-010b-4643-b0f1-d0fab8da59be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuitGame",
                    "type": "Button",
                    "id": "05c8ad6e-c160-4913-a924-4ae870e8163c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e1b14865-4a17-419b-ba99-73cb743d0873",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Advance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c0e2306-abb9-4f12-b38e-121cc2f28ab4",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Advance",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf77163c-38ff-4081-9fa6-84059221802f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard;Gamepad",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "8249557d-d387-44a8-94b8-cb0e51bc904b",
            "actions": [
                {
                    "name": "Select",
                    "type": "Value",
                    "id": "7b024bb9-6f7f-4df3-af1a-c2f9f7f2b86a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "OK",
                    "type": "Button",
                    "id": "59a1290c-5d9b-44b9-be52-8fcee6ce74b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "37887a12-7fba-4c65-b41b-728c915a76b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuitGame",
                    "type": "Button",
                    "id": "9d853675-3a1b-46a4-a12b-161e4e9a4899",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4704f106-4e5a-4f1d-b7b5-93a3256ae113",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "3d189833-794a-4349-b1ef-b26976b75c48",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2248caab-e821-4b1a-b38b-7c87a442722b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "53a11214-637d-4d9c-8d78-64647dc984d5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9fbeeb6d-8a61-4be5-9259-0c7d6ef7631e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "207105cb-ef6c-4303-810f-bdbf8bb9c55d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e84d6453-3e50-4ce2-b315-4b25b8de95fc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "OK",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92e2876a-e901-4875-8e72-5ac5adc2ece8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "OK",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0dd421e-5499-45d1-8ec3-6007dff41580",
                    "path": "<Keyboard>/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard;Gamepad",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f86605c-902b-4bd8-a9f2-c0dcb2e5c219",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6472e8f3-a684-430e-b132-a116e83ae1cd",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard;Gamepad",
                    "action": "QuitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>/{Back}",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}